--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.1",
     "dotenv": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
